Arquivo de estilização CSS

--- a/Fundamentos/HTML/Aula 3.2/index.html
+++ b/Fundamentos/HTML/Aula 3.2/index.html
@@ -3,29 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>HTML</title>
-    <style>
-      h1 {
-        size: 65 px;
-        color: orange;
-      }
-
-      ul {
-        background-color: rgb(200, 200, 200);
-      }
-
-      .bg {
-        background-color: blue;
-        color: white;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" type="text/css" />
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p class="bg">Qual é a sua cor favorita?</p>
+    <p class="bg" id="paragrafo">Qual é a sua cor favorita?</p>
     <ul class="bg">
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li class="amarelo">Amarelo</li>
+      <li class="vermelho">Vermelho</li>
+      <li class="marrom">Marrom</li>
     </ul>
   </body>
 </html>
