--- a/Fundamentos/HTML/Aula 3.3/index.html
+++ b/Fundamentos/HTML/Aula 3.3/index.html
@@ -2,15 +2,30 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Posicionamento de elementos</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>Agrupando Seletores</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Exercícios de fixação 3.3</h1>
-    <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
-    <img src="https://bit.ly/3arGfMc" alt="goomba" class="goomba" />
-    <img src="https://bit.ly/3AVnjks" alt="bowser" class="bowser" />
-    <p class="speach">Goomba, do something!</p>
-    <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
+    <div class="titulo">
+      <h1>Lista dos Melhores Sites que já vi</h1>
+    </div>
+    <div class="paragrafos">
+      <p>Top 3 dos melhores sites que existem na web</p>
+      <p>Principais motivos para eu gostar deles</p>
+    </div>
+    <div class="listaordenada">
+      <ol class="lista">
+        <li>Youtube</li>
+        <li>Twitch</li>
+        <li>Google</li>
+      </ol>
+    </div>
+    <div class="listanaoord">
+      <ul class="lista">
+        <li>Conteudos</li>
+        <li>Qualquer hora do dia</li>
+        <li>Ver de tudo</li>
+      </ul>
+    </div>
   </body>
 </html>
