--- a/Fundamentos/HTML/Aula 3.3/index.html
+++ b/Fundamentos/HTML/Aula 3.3/index.html
@@ -2,30 +2,74 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Agrupando Seletores</title>
     <link rel="stylesheet" href="style.css" />
+    <title>#GoTrybe</title>
   </head>
   <body>
-    <div class="titulo">
-      <h1>Lista dos Melhores Sites que já vi</h1>
-    </div>
-    <div class="paragrafos">
-      <p>Top 3 dos melhores sites que existem na web</p>
-      <p>Principais motivos para eu gostar deles</p>
-    </div>
-    <div class="listaordenada">
-      <ol class="lista">
-        <li>Youtube</li>
-        <li>Twitch</li>
-        <li>Google</li>
-      </ol>
-    </div>
-    <div class="listanaoord">
-      <ul class="lista">
-        <li>Conteudos</li>
-        <li>Qualquer hora do dia</li>
-        <li>Ver de tudo</li>
-      </ul>
-    </div>
+    <h1><em>Combinações e Classes Descendentes</em></h1>
+    <br />
+    <h3>Top 5 frases memoráveis:</h3>
+    <ol class="orderedlist">
+      <li class="olimpar">
+        <em class="litalic"
+          >Com grandes poderes vêm grandes responsabilidades.</em
+        >
+        - Tio Ben (Homem Aranha)
+      </li>
+      <li class="olpar">
+        <em class="litalic">Houston, temos um problema.</em> - Jack Swigert
+      </li>
+      <li class="olimpar">
+        <em class="litalic">Sempre parece impossível até que esteja feito.</em>
+        - Nelson Mandela
+      </li>
+      <li class="olpar">
+        <em class="litalic">Parte da jornada é o fim.</em> - Tony Stark (Homem
+        de Ferro)
+      </li>
+      <li class="olimpar">
+        <em class="litalic"
+          >Às vezes, o melhor que podemos fazer é começar novamente.</em
+        >
+        - Steve Rogers (Capitão América)
+      </li>
+    </ol>
+    <h3>As maiores linguagens de programação:</h3>
+    <ul>
+      <li class="fontblue">Python</li>
+      <li class="fontblue" id="bgpink">Java</li>
+      <li class="fontblue">JavaScript</li>
+      <li>C#</li>
+      <li>C / C++</li>
+    </ul>
+    <h3>Maiores aliados de uma pessoa desenvolvedora:</h3>
+    <ul class="sites">
+      <li>
+        <a href="https://pt.stackoverflow.com/" target="_blank" class="stack"
+          >StackOverflow</a
+        >
+      </li>
+      <li>
+        <a href="https://www.w3schools.com/" target="_blank" class="w3"
+          >W3Schools</a
+        >
+      </li>
+      <li>
+        <a
+          href="https://developer.mozilla.org/pt-BR/"
+          target="_blank"
+          class="mdn"
+          >MDN Web Docs</a
+        >
+      </li>
+      <li>
+        <a href="https://devdocs.io/" target="_blank" class="dev">DevDocs</a>
+      </li>
+      <li>
+        <a href="https://app.betrybe.com/" target="_blank" class="trybe"
+          >Trybe</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
