--- a/Fundamentos/B6 Forms E Flexbox/Aula 6.1/index.html
+++ b/Fundamentos/B6 Forms E Flexbox/Aula 6.1/index.html
@@ -4,10 +4,70 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Travel Form</title>
+    <!-- CSS only -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header>
+      <h1 class="h1">Fomulário de viagem</h1>
+    </header>
+    <!-- form principal -->
+    <form action="" method="GET" id="form">
+      <div>
+        <label for="Name">Name</label>
+        <input type="text" />
+      </div>
+      <div>
+        <label for="Email">Email</label>
+        <input type="text" />
+      </div>
+      <div>
+        <label for="op1">
+          <input type="radio" name="op" id="op1" value="op1" /> Opção 1
+        </label>
+        <label for="op2">
+          <input type="radio" name="op" id="op2" value="op2" /> Opção 2
+        </label>
+        <label for="op3">
+          <input type="radio" name="op" id="op3" value="op3" /> Opção 3
+        </label>
+        <label for="op4">
+          <input type="radio" name="op" id="op4" value="op4" /> Opção 4
+        </label>
+      </div>
+      <label for="resposta">Espaço para digitar sua resposta</label>
+      <div>
+        <textarea name="resposta" id="resposta" cols="30" rows="10"></textarea>
+      </div>
+      <div>
+        <label for="date">Data: </label>
+        <input type="date" name="" id="" />
+      </div>
+      <div>
+        <label for="agreed1">Concordo 1</label>
+        <input type="checkbox" name="agreed1" id="agreed1" />
+      </div>
+      <div>
+        <label for="agreed2">Concordo 2</label>
+        <input type="checkbox" name="agreed2" id="agreed1" />
+      </div>
+    </form>
+    <button>Enviar</button>
+    <button>Apagar</button>
+
+    <!-- JavaScript Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
   </body>
 </html>
