trocando buttons por input

--- a/Fundamentos/B6 Forms E Flexbox/ Aula 6.1 e 6.2/index.html
+++ b/Fundamentos/B6 Forms E Flexbox/ Aula 6.1 e 6.2/index.html
@@ -58,10 +58,12 @@
         <label for="agreed2">Concordo 2</label>
         <input type="checkbox" name="agreed2" id="agreed1" />
       </div>
+      <label for="foto">Autorizo o uso de foto</label>
+      <input type="checkbox" id="foto" required />
+      <div></div>
+      <input type="submit" />
+      <input type="reset" value="Reset" />
     </form>
-    <button>Enviar</button>
-    <button>Apagar</button>
-
     <!-- JavaScript Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
